# chat-with-files

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/: document_processing.py  embedding.py  indexing.py  main.py  utils.py
frontend/: app.py
